name:                hexquote
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            FIXME
category:            Data
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.4
description:
  FIXME

library
  exposed-modules:  Data.Hex.Quote
  ghc-options:      -Wall
  build-depends:
      base             >= 3 && < 5
    , containers       >= 0.2
    , template-haskell >= 2.3
    , bytestring       >= 0.9
    , parsec           >= 3.1

  other-extensions:
      TemplateHaskell
    , NamedFieldPuns
    , CPP
    , ViewPatterns
